2007-04-26  kevin montuori  <montuori@gmail.com>

	* lib/Device/Arduino/LCD.pm: added bargraph and convert_to_char
	functions; made 

	* examples/graph.pl: added example of graph(0 and tallgraph().

	* examples/custom-char.pl: added example of convert_to_char
	function and a simple animation

	* lib/Device/Arduino/LCD.pm: fixed the class the global variables
	belonged to (was PerLCD:: now Device::Arduino::LCD::).
 
	* Makefile.PL: added Class::MethodMaker as a prereq.
