@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Device-Arduino-LCD
-version:      1.01
+version:      1.02
 version_from: lib/Device/Arduino/LCD.pm
 installdirs:  site
 requires:
