@@ -11,35 +11,50 @@ my $lcd = Device::Arduino::LCD->new;
 $lcd->clear;
 
 my $ret = $lcd->convert_to_char(0,
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ]);
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ]);
 
 my $ret = $lcd->convert_to_char(1,
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ],
-				[ qw[ x . x . x ] ],
-				[ qw[ . x . x . ] ]);
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ]);
 
-for (1 .. 10) {
-  $lcd->write_ascii(1, 1, 8);
-  $lcd->write_ascii(1, 1, 9);
-  $lcd->write_ascii(1, 2, 8);
-  $lcd->write_ascii(1, 2, 9);
-  usleep 100_000;
-  $lcd->write_ascii(0, 1, 8);
-  $lcd->write_ascii(0, 1, 9);
-  $lcd->write_ascii(0, 2, 8);
-  $lcd->write_ascii(0, 2, 9);
-  usleep 100_000;
+my $ret = $lcd->convert_to_char(2,
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ]);
+
+my $ret = $lcd->convert_to_char(3,
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ],
+				[ qw[ x . . x x ] ],
+				[ qw[ . . x x . ] ],
+				[ qw[ . x x . . ] ],
+				[ qw[ x x . . x ] ]);
+
+
+while (1) {
+  for (0 .. 3) {
+    $lcd->write_ascii($_, 1, 8);
+    $lcd->write_ascii($_, 2, 8);
+    usleep 500_000;
+  }
 }
-
